# euroc_msgs

suturo_environment_msgs/: CMakeLists.txt  package.xml
suturo_environment_msgs/msg/: Cell.msg  Map.msg  Region.msg
suturo_environment_msgs/srv/: BlowUpObjects.srv  CreatePosesForScanning.srv  FilterPoses.srv  GetBaseOrigin.srv  GetMap.srv  GetObstacleRegions.srv  GetPercentCleared.srv  MarkRegionAsObjectUnderPoint.srv
suturo_head_mover_msgs/: CMakeLists.txt  package.xml
suturo_head_mover_msgs/msg/: SuturoMlAction.msg  SuturoMlFeature.msg  SuturoMlPolicy.msg  SuturoMlPolicyEntry.msg  SuturoMlState.msg
suturo_head_mover_msgs/srv/: CheckContact.srv  Hammertime.srv  SuturoMlFeedPolicy.srv  SuturoMlNextAction.srv
suturo_interface_msgs/: CMakeLists.txt  package.xml
suturo_interface_msgs/msg/: TaskData.msg
suturo_interface_msgs/srv/: AddPointCloud.srv  CurrentMapToCollisionObject.srv  EurocObjectToOdomCombined.srv  GetNearestObjectIDX.srv  GraspObject.srv  SearchObjects.srv  StartPlanning.srv  (+2 more)
suturo_manipulation_msgs/: CMakeLists.txt  package.xml
suturo_msgs/: CMakeLists.txt  package.xml
suturo_perception_msgs/: CMakeLists.txt  package.xml
suturo_startup_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
suturo_video_msgs/: CMakeLists.txt  package.xml
suturo_video_msgs/action/: Play.action
suturo_video_msgs/msg/: PlayFeedback.msg  PlayGoal.msg  PlayResult.msg  SavedImage.msg  Test.msg  TestResult.msg
suturo_video_msgs/srv/: AddTests.srv  ExecuteTests.srv  GetSavedImages.srv  GetSimulationRuns.srv  GetTestResults.srv  GetTests.srv  GetTopicNames.srv
(+36 files in other folders)
